parity update